# ConsoleGL

./: .gitignore  BuildStatic-Debug.bat  CMakeLists.txt  CleanProjectFiles.bat  KillAllConsoleDock.bat  README.md  premake5.lua  utils.lua
Applications/Example/: Main.cpp  Test.hpp
Applications/Template/Source/: ExampleApplication.cpp
Built/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ConsoleDock.vcxproj  ConsoleDock.vcxproj.filters  ConsoleGL-Core.vcxproj  ConsoleGL-Core.vcxproj.filters  ConsoleGL-Example.vcxproj  ConsoleGL-Example.vcxproj.filters  ConsoleGL-Shaders.vcxproj  ConsoleGL-Shaders.vcxproj.filters  ConsoleGL.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ConsoleDock/: Main.cpp
ConsoleGL/: premake5.lua
ConsoleGL-ConsoleDock/: Main.cpp  premake5.lua
ConsoleGL-Core/Include/ConsoleGL/: Colour.cpp  Colour.hpp  ConsoleColour.cpp  ConsoleColour.hpp  ConsoleGL.hpp  ConsoleRendering.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  Pixel.cpp  Pixel.hpp  PixelColourMap.hpp  PixelMap.cpp  PixelMap.hpp  PixelMap.inl  Window.cpp  Window.hpp
ConsoleGL-Example/: Main.cpp
ConsoleGL-PixelMap/: Main.cpp  PixelMap.hpp  premake5.lua
ConsoleGL-PixelMapGenerator/: Main.cpp  premake5.lua
ConsoleGL-ShaderCompiler/: Main.cpp  glm.inl  premake5.lua
ConsoleGL-Shared/: ConsoleGL-Shared.cpp  premake5.lua
ConsoleGL-Static/: premake5.lua
ConsoleGL/Dependencies/memory_module/include/memory_module/: MemoryModule.cpp
ConsoleGL/Source/: Assert.cpp  Assert.hpp  Colour.cpp  Common.hpp  Config.hpp  ConsoleGL.cpp  ConsoleGL.hpp  Error.cpp  Error.hpp  Event.cpp  Event.hpp  FileMap.cpp  FileMap.hpp  Log.cpp  Log.hpp  Pixel.cpp  Pixel.hpp  PixelBuffer.cpp  PixelBuffer.hpp  Platform.cpp  Utilities.cpp  Utilities.hpp  Window.cpp  Window.hpp
ConsoleGL/Templates/: ConsoleDock.f2c  FragmentShaderTemplate.hpp  PixelMap.f2c  ShaderCompiler.f2c  VertexShaderTemplate.hpp
Source_OLD/ConsoleGL-ConsoleDock/: Main.cpp
enc_temp_folder/6249169cabf8bf4a4791947551ada/: ConsoleGL.cpp
